iptables/iptables
# Generated by iptables-save v1.4.1.1 on Wed Jan 14 23:26:54 2009
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [946887:144099549]
-A INPUT -s 80.233.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 218.75.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 61.134.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 190.5.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 74.206.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 61.155.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 203.93.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 210.48.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 189.126.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 116.122.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 91.82.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 211.96.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 219.143.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 189.20.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 219.93.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 124.254.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 209.40.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -s 221.206.0.0/16 -p tcp -m tcp --dport 22 -j DROP 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
# 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16001 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Wed Jan 14 23:26:54 2009
